--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,16 @@
 <html>
 
+<head>
+    <style>
+        img {
+            display: block;
+        }
+    </style>
+</head>
+
 <body>
     <form ref='uploadForm' id='uploadForm' action='/upload' method='post' encType="multipart/form-data">
-        <input type="file" name="sampleFile" />
+        <input type="file" name="userFile" />
         <input type='submit' value='Upload!' />
     </form>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
