--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,9 @@
 </head>
 
 <body>
-    <form ref='uploadForm' id='uploadForm' action='/upload' method='post'>
-        <input type="text" name="picTitle" placeholder="title">
+    <form ref='uploadForm' id='uploadForm' action='/upload' method='post' encType="multipart/form-data">
+        <input type="file" name="userFile" />
+        <input type="text" name="title" placeholder="title">
         <input type="text" name="description" placeholder="Description">
         <input type='submit' value='Upload!' />
     </form>
